[gd_scene load_steps=41 format=3 uid="uid://b1wjhmg5842ey"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_30hg8"]
[ext_resource type="Texture2D" uid="uid://dqrwxtg4cuk8m" path="res://assets/Menu.png" id="2_rabbg"]
[ext_resource type="AudioStream" uid="uid://bgmtjlruqdaxg" path="res://sounds/BGM.wav" id="2_vm6mc"]
[ext_resource type="Texture2D" uid="uid://bpq6gkrdk2tgk" path="res://assets/4498fd18c59c6d058bd083fa6c2b7f96-resized.png" id="3_b5o08"]
[ext_resource type="FontFile" uid="uid://cef4gbi7nqx3w" path="res://Fonts/Gen Jyuu Gothic Monospace Heavy.ttf" id="4_lel3i"]
[ext_resource type="Texture2D" uid="uid://dlmt0ef2xieqi" path="res://UI/yellowRectNormal.png" id="6_xnb2w"]
[ext_resource type="Texture2D" uid="uid://k71w56ukwmtg" path="res://UI/settingsBtn.png" id="7_ab2d5"]
[ext_resource type="Script" path="res://scripts/setting.gd" id="8_hr5bw"]
[ext_resource type="Texture2D" uid="uid://c7ek5yw24hrme" path="res://UI/english.png" id="9_lcgeb"]
[ext_resource type="Texture2D" uid="uid://b0wkyi22ihd6u" path="res://UI/jP.png" id="10_k1j0h"]
[ext_resource type="Texture2D" uid="uid://d1lemegy2hs7f" path="res://UI/closeBtn.png" id="11_kt70c"]
[ext_resource type="Texture2D" uid="uid://dx4ynppg1bpxo" path="res://UI/soundOffBtn.png" id="12_lafm7"]
[ext_resource type="Texture2D" uid="uid://6lihqxf3ernf" path="res://UI/soundOnBtn.png" id="13_uyqnn"]
[ext_resource type="Script" path="res://scenes/VolumSlider.gd" id="14_o41jf"]

[sub_resource type="LabelSettings" id="LabelSettings_c11yy"]
line_spacing = -20.0
font = ExtResource("4_lel3i")
font_size = 86
font_color = Color(1, 0.443057, 0.107906, 1)
outline_size = 60

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ihw4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_okwee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn7w"]

[sub_resource type="LabelSettings" id="LabelSettings_wjvxk"]
font = ExtResource("4_lel3i")
font_size = 71
font_color = Color(0.308561, 0.158187, 2.40654e-08, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytove"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.192157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_81x28"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ko2ib"]
bg_color = Color(0.957918, 0.80729, 0.61882, 1)
border_color = Color(0.993597, 0.706825, 0.793039, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing_size = 0.01

[sub_resource type="LabelSettings" id="LabelSettings_e0m2w"]
font = ExtResource("4_lel3i")
font_size = 120
font_color = Color(0, 0, 0, 1)
outline_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5h8qt"]
bg_color = Color(1, 0.67451, 0.670588, 0)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvp3e"]
bg_color = Color(0.6, 0.6, 0.6, 0.588235)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ruu8i"]
bg_color = Color(0.6, 0.6, 0.6, 0.368627)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_er71x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qpqjr"]
bg_color = Color(0.886966, 0.545404, 0.599298, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpc6t"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ug4l6"]
bg_color = Color(0.6, 0.6, 0.6, 0.572549)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xyfb"]
bg_color = Color(0.6, 0.6, 0.6, 0.388235)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7kar"]
bg_color = Color(0.909804, 0.360784, 0.721569, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogpfi"]
bg_color = Color(1, 0.284297, 0.346101, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tkx3o"]
bg_color = Color(0.419221, 0, 0.0829647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2e0r"]
bg_color = Color(0.989312, 0.846664, 0.687863, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.588997, 0.496612, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_vvy33"]
font = ExtResource("4_lel3i")
font_size = 41
font_color = Color(0.374868, 0.248481, 0.0621097, 1)
outline_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_obft5"]
line_spacing = 8.575
font = ExtResource("4_lel3i")
font_size = 36
font_color = Color(0.638095, 0.328157, 0.0975855, 1)
outline_size = 17

[sub_resource type="LabelSettings" id="LabelSettings_p7rj8"]
font = ExtResource("4_lel3i")
font_size = 61
outline_size = 24
outline_color = Color(0.231373, 0.145098, 0.0235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvhaa"]
bg_color = Color(0.865726, 0, 0.16352, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qppv1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_30hg8")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 640.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.667929, 0.667929)
texture = ExtResource("2_rabbg")

[node name="BG2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -4.0
offset_right = 2047.0
offset_bottom = 1151.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.387929, 0.387929)
texture = ExtResource("3_b5o08")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 45.0
offset_right = 1009.0
offset_bottom = 267.0
text = "Whisker
The Detective"
label_settings = SubResource("LabelSettings_c11yy")
horizontal_alignment = 1

[node name="Sound" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("2_vm6mc")
volume_db = -10.0

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 547.0
offset_top = 424.0
offset_right = 906.0
offset_bottom = 586.0
scale = Vector2(0.48, 0.48)
theme_override_styles/normal = SubResource("StyleBoxEmpty_2ihw4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_okwee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn7w")
icon = ExtResource("6_xnb2w")

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"
label_settings = SubResource("LabelSettings_wjvxk")

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 547.0
offset_top = 599.0
offset_right = 906.0
offset_bottom = 761.0
scale = Vector2(0.484075, 0.484075)
theme_override_styles/normal = SubResource("StyleBoxEmpty_2ihw4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_okwee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn7w")
icon = ExtResource("6_xnb2w")

[node name="Label" type="Label" parent="ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_wjvxk")

[node name="CreditButton" type="Button" parent="."]
layout_mode = 0
offset_left = 547.0
offset_top = 511.0
offset_right = 906.0
offset_bottom = 673.0
scale = Vector2(0.48, 0.48)
theme_override_styles/normal = SubResource("StyleBoxEmpty_2ihw4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_okwee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn7w")
icon = ExtResource("6_xnb2w")

[node name="Label" type="Label" parent="CreditButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Credit"
label_settings = SubResource("LabelSettings_wjvxk")

[node name="SettingButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 533.0
offset_top = -334.0
offset_right = 541.0
offset_bottom = -326.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10.32, 10.32)
theme_override_styles/normal = SubResource("StyleBoxFlat_ytove")
theme_override_styles/focus = SubResource("StyleBoxEmpty_81x28")

[node name="Setting" type="TextureRect" parent="SettingButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 248.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0310067, 0.0310067)
texture = ExtResource("7_ab2d5")

[node name="SettingPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_hr5bw")

[node name="Panel" type="Panel" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -121.0
offset_right = -261.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(11.8067, 6.50019)
theme_override_styles/panel = SubResource("StyleBoxFlat_ko2ib")

[node name="LabelLanguage" type="Label" parent="SettingPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0698755
anchor_top = 0.219224
anchor_right = 0.0698761
anchor_bottom = 0.219224
offset_right = 793.0
offset_bottom = 230.0
scale = Vector2(0.0216527, 0.042399)
text = "Language"
label_settings = SubResource("LabelSettings_e0m2w")
metadata/_edit_use_anchors_ = true

[node name="LabelSound" type="Label" parent="SettingPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0754717
anchor_top = 0.55
anchor_right = 27.7925
anchor_bottom = 4.225
offset_right = 519.0
offset_bottom = 230.0
scale = Vector2(0.0216527, 0.042399)
text = "Volume"
label_settings = SubResource("LabelSettings_e0m2w")
metadata/_edit_use_anchors_ = true

[node name="ENButton" type="Button" parent="SettingPanel/Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 10.0
offset_right = 35.0
offset_bottom = 17.0
theme_override_styles/normal = SubResource("StyleBoxFlat_5h8qt")
theme_override_styles/hover = SubResource("StyleBoxFlat_tvp3e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ruu8i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_er71x")

[node name="Panel" type="Panel" parent="SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.75725
offset_top = -0.615658
offset_right = -1.75725
offset_bottom = -0.615658
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.15999, 1.15999)
theme_override_styles/panel = SubResource("StyleBoxFlat_qpqjr")

[node name="ENflag" type="TextureRect" parent="SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.255228
anchor_top = 0.48924
anchor_right = 0.25524
anchor_bottom = 0.48924
offset_left = -4.39764
offset_top = -3.27118
offset_right = 1395.61
offset_bottom = 1396.73
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0018773, 0.00339199)
texture = ExtResource("9_lcgeb")

[node name="LabelEN" type="Label" parent="SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400142
anchor_top = 0.223063
anchor_right = 0.400143
anchor_bottom = 0.223063
offset_left = -2.55482
offset_top = -2.1771
offset_right = 499.445
offset_bottom = 447.823
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0216527, 0.042399)
text = "EN"
label_settings = SubResource("LabelSettings_e0m2w")
autowrap_mode = 3

[node name="JPButton" type="Button" parent="SettingPanel/Panel"]
layout_mode = 0
offset_left = 37.267
offset_top = 9.99971
offset_right = 50.267
offset_bottom = 16.9997
theme_override_styles/normal = SubResource("StyleBoxFlat_dpc6t")
theme_override_styles/hover = SubResource("StyleBoxFlat_ug4l6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2xyfb")
theme_override_styles/focus = SubResource("StyleBoxFlat_a7kar")

[node name="Panel2" type="Panel" parent="SettingPanel/Panel/JPButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.10107
offset_top = -0.615368
offset_right = -1.10107
offset_bottom = -0.615368
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.15999, 1.15999)
theme_override_styles/panel = SubResource("StyleBoxFlat_qpqjr")

[node name="LabelJP" type="Label" parent="SettingPanel/Panel/JPButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400142
anchor_top = 0.223063
anchor_right = 0.400143
anchor_bottom = 0.223063
offset_left = -1.55984
offset_top = -2.63833
offset_right = 500.44
offset_bottom = 447.362
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0216527, 0.042399)
text = "JP"
label_settings = SubResource("LabelSettings_e0m2w")
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="SettingPanel/Panel/JPButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0846977
anchor_top = 0.175819
anchor_right = 74.1348
anchor_bottom = 138.181
offset_left = -1.18577
offset_top = -0.922759
offset_right = 36.163
offset_bottom = 33.0381
scale = Vector2(0.003, 0.005)
texture = ExtResource("10_k1j0h")
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="SettingPanel/Panel"]
layout_mode = 0
offset_left = 49.6328
offset_top = -2.76915
offset_right = 57.6328
offset_bottom = 5.23085
scale = Vector2(0.567354, 0.96007)
theme_override_styles/normal = SubResource("StyleBoxFlat_ogpfi")
theme_override_styles/hover = SubResource("StyleBoxFlat_tkx3o")

[node name="TextureRect" type="TextureRect" parent="SettingPanel/Panel/CloseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.23928
offset_top = 1.76264
offset_right = 250.239
offset_bottom = 249.763
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0141601, 0.0141601)
texture = ExtResource("11_kt70c")

[node name="TextureRect" type="TextureRect" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 21.0
offset_right = 182.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.239999, 0.239999)
texture = ExtResource("12_lafm7")

[node name="TextureRect2" type="TextureRect" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 212.0
offset_top = 21.0
offset_right = 468.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.239999, 0.239999)
texture = ExtResource("13_uyqnn")

[node name="VolumSlider" type="HSlider" parent="SettingPanel"]
layout_mode = 0
offset_left = 629.0
offset_top = 399.0
offset_right = 770.0
offset_bottom = 415.0
scale = Vector2(1.4, 1.4)
max_value = 1.0
step = 0.001
script = ExtResource("14_o41jf")
bus_name = "Master"

[node name="CreditPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 358.0
offset_top = 316.0
offset_right = 398.0
offset_bottom = 356.0
scale = Vector2(14.7491, 8.95117)
theme_override_styles/panel = SubResource("StyleBoxFlat_o2e0r")

[node name="Label" type="Label" parent="CreditPanel"]
layout_mode = 0
offset_left = 2.64423
offset_top = 5.02727
offset_right = 504.644
offset_bottom = 386.027
scale = Vector2(0.0650833, 0.0866405)
text = "Game Developer


Music
"
label_settings = SubResource("LabelSettings_vvy33")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CreditPanel"]
layout_mode = 0
offset_left = 2.57643
offset_top = 5.58586
offset_right = 504.576
offset_bottom = 386.586
scale = Vector2(0.0650833, 0.0866405)
text = "
Laksika Panich
laksikapanich@gmail.com

https://www.wowsound.com/"
label_settings = SubResource("LabelSettings_obft5")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CreditPanel"]
layout_mode = 0
offset_left = 1.96622
offset_top = 11.1717
offset_right = 344.966
offset_bottom = 97.1717
scale = Vector2(0.023944, 0.0505902)
text = "♡(੭´͈ ᐜ `͈)੭"
label_settings = SubResource("LabelSettings_p7rj8")
horizontal_alignment = 1

[node name="Button" type="Button" parent="CreditPanel"]
layout_mode = 0
offset_left = 34.7818
offset_right = 42.7818
offset_bottom = 8.0
scale = Vector2(0.572352, 0.827979)
theme_override_styles/normal = SubResource("StyleBoxFlat_xvhaa")
theme_override_styles/hover = SubResource("StyleBoxFlat_xvhaa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qppv1")

[node name="TextureRect" type="TextureRect" parent="CreditPanel/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.25073
offset_top = 1.88898
offset_right = 323.251
offset_bottom = 357.889
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0125991, 0.0125991)
texture = ExtResource("11_kt70c")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="SettingPanel/Panel/ENButton" to="SettingPanel" method="_on_en_button_pressed"]
[connection signal="pressed" from="SettingPanel/Panel/JPButton" to="SettingPanel" method="_on_jp_button_pressed"]
[connection signal="pressed" from="SettingPanel/Panel/CloseButton" to="SettingPanel" method="_on_close_button_pressed"]
[connection signal="pressed" from="CreditPanel/Button" to="." method="_on_button_pressed"]
